...
            }
        },
        floatingActionButton = {
            if (canAdd)
                ExtendedFloatingActionButton(
                    modifier =
                        Modifier.testTag("quick-add").semantics {
                            contentDescription = quickAddDescription
                        },
                    onClick = { quickAdd = true },
                    icon = { Icon(Icons.Outlined.Add, null) },
                    text = { Text(stringResource(R.string.add)) },
                    containerColor = MaterialTheme.colorScheme.onBackground,
...
